# cmd/gin-api/docs/swagger.json
@@ -31,7 +31,7 @@
                     {
                         "type": "string",
                         "description": "用户名",
-                        "name": "userName",
+                        "name": "user_name",
                         "in": "query"
                     },
                     {
@@ -43,7 +43,7 @@
                     {
                         "type": "string",
                         "description": "模糊查询",
-                        "name": "queryValue",
+                        "name": "query_value",
                         "in": "query"
                     }
                 ],
